--- a/lecNotes/prereq.ipynb
+++ b/lecNotes/prereq.ipynb
@@ -59,8 +59,10 @@
     "## RNN(Recurrent Neural Network):\n",
     "- Sequential Data is used.\n",
     "- Here sequence of the data is very much important.\n",
+    "- We give one word at a time.\n",
     "- Text Generation, Language Translation, Chatbot Conversation, Auto Suggestion(gmail).\n",
-    "- Time Series Data which is used in sales forecasting."
+    "- Time Series Data which is used in sales forecasting.\n",
+    "- Feedback Loop is provided to all nodes, which is maintaing state/context."
    ]
   }
  ],
