Simple RNN Strucutre and Working

--- a/lecNotes/prereq.ipynb
+++ b/lecNotes/prereq.ipynb
@@ -64,6 +64,41 @@
     "- Time Series Data which is used in sales forecasting.\n",
     "- Feedback Loop is provided to all nodes, which is maintaing state/context."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Activation Function:\n",
+    "- Sigmoid: used for binaray classification.\n",
+    "- Softmax: used for MultiClass."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Notes:\n",
+    "- after forward propogation, we get y^ as output. we calculate y-y^, which is our Loss Funtion. The main Aim is to reduce loss function by adjusting weights, bias (Trainable parameter) in Backward propogation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Limitation of Simple RNN:\n",
+    "- Long term dependency can not be captured by Simple RNN.\n",
+    "- output will be dependent on nearest time stemp, and avoid far time stemp.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--------------------------------------------\n",
+    "- To avoid above problem, we can use Relu OR leaky Relu instead of Sigmoid Activation Function.\n",
+    "- Other Variant of RNN, that is LSTM RNN and GRU RNN is good to use."
+   ]
   }
  ],
  "metadata": {
